config/kubernetes/production/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: request-personal-information-production
  namespace: request-personal-information-production
spec:
  replicas: 3
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  selector:
    matchLabels:
      app: request-personal-information-web-production
  template:
    metadata:
      labels:
        app: request-personal-information-web-production
        tier: frontend
    spec:
      serviceAccountName: request-personal-information
      containers:
      - name: webapp
        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/central-digital-product-team/request-personal-information-development:production.latest
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
        command: ["./config/docker/entrypoint-webapp.sh"]
        resources:
          requests:
            cpu: 125m
            memory: 500Mi
          limits:
            cpu: 250m
            memory: 1Gi
        readinessProbe:
          httpGet:
            path: /up
            port: 3000
            httpHeaders:
              - name: X-Forwarded-Proto
                value: https
              - name: X-Forwarded-Ssl
                value: "on"
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /up
            port: 3000
            httpHeaders:
              - name: X-Forwarded-Proto
                value: https
              - name: X-Forwarded-Ssl
                value: "on"
          initialDelaySeconds: 30
          periodSeconds: 10
      - name: jobs
        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/central-digital-product-team/request-personal-information-development:production.latest
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
        command: ["./config/docker/entrypoint-jobs.sh"]
