config/kubernetes/production/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: request-personal-information-ingress-production
  namespace: request-personal-information-production
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: app-secrets
    external-dns.alpha.kubernetes.io/set-identifier: request-personal-information-ingress-production-request-personal-information-production-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecRuleEngine DetectionOnly
      SecDefaultAction "phase:2,pass,log,tag:github_team=central-digital-product-team,tag:namespace=request-personal-information-production"
spec:
  ingressClassName: modsec
  tls:
  - hosts:
    - request-personal-information-production.apps.live.cloud-platform.service.justice.gov.uk
  - hosts:
    - request-for-personal-information.service.justice.gov.uk
  rules:
  - host: request-personal-information-production.apps.live.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: request-personal-information-service-production
            port:
              number: 80
  - host: request-for-personal-information.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: find-unclaimed-court-money-service
            port:
              number: 3000
